objects/Interns_Report__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise Services</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Human Resource</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <displayFormat>I-{000}</displayFormat>
        <label>Employee Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Office_email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Office email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Interns Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interns Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interns Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>